--- a/estilo.css
+++ b/estilo.css
@@ -100,7 +100,7 @@ html {
 }
 
 main {
-    background-image: url('img/porteria.jpg');
+    background-image: url('./img/porteria.jpg');
     max-width: 100%;
     height: 400px;
     background-repeat: no-repeat;
